refactor(admin): 替换alert为showNotification提升用户体验
将管理后台中的alert提示统一替换为showNotification，提供更友好的用户反馈

--- a/templates/admin/navigation.html
+++ b/templates/admin/navigation.html
@@ -4,6 +4,11 @@
   导航管理 - JuFire Studio
 {% endblock %}
 
+{% block scripts %}
+  <script src="{{ url_for('static', filename='js/utils.js') }}"></script>
+  <script src="{{ url_for('static', filename='js/admin-navigation.js') }}"></script>
+{% endblock %}
+
 {% block content %}
   <div class="container mt-4">
     <div class="row">
